Fix in gviam-swagger
