# gvengine/gvapi/src/main/resources/gviam-swagger.json
@@ -11,13 +11,10 @@
       "name": "admin"
     },
     {
-      "name": "authenticate"
+      "name": "user"
     },
     {
       "name": "oauth2"
-    },
-    {
-      "name": "password"
     }
   ],
   "schemes": [
@@ -29,7 +26,8 @@
         "tags": [
           "admin"
         ],
-        "summary": "Get all roles",
+        "summary": "Get roles",
+        "description": "Returns the roles managed by the current logged user",
         "operationId": "getRoles",
         "security": [
           {
@@ -41,16 +39,13 @@
         ],
         "responses": {
           "200": {
-            "description": "List of all roles",
+            "description": "List of managed roles",
             "schema": {
               "type": "array",
               "items": {
                 "$ref": "#/definitions/role"
               }
             }
-          },
-          "503": {
-            "description": "Service unavailable"
           }
         }
       }
@@ -60,7 +55,8 @@
         "tags": [
           "admin"
         ],
-        "summary": "Get all users",
+        "summary": "Get users",
+        "description": "Returns the users managed by the current logged user, with pagination support and filtering by search parameters.",
         "operationId": "getUsers",
         "security": [
           {
@@ -70,9 +66,73 @@
         "produces": [
           "application/json"
         ],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Range",
+            "description": "to limit number of users to return, giving start and end index, i.e.: _users 0-30_ to retrieve first 30 users, _users 30-60_ for the next 30",
+            "type": "string",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "username",
+            "description": "to search by username, * wildcard is supported",
+            "type": "string",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "email",
+            "description": "to search by email, * wildcard is supported",
+            "type": "string",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "fullname",
+            "description": "to search by fullname, * wildcard is supported",
+            "type": "string",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "role",
+            "description": "to search by role name, * wildcard is supported",
+            "type": "string",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "enabled",
+            "description": "to search by enabling status",
+            "type": "boolean",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "expired",
+            "description": "to search by expiring status",
+            "type": "boolean",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "order",
+            "description": "to order by supported fields _username, email, fullname, role, enabled, expired_. Repeat for multiple order criteria, use _:reverse_ suffix for reverse order, i.e. _email:reverse_.",
+            "type": "string",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Get all users",
+            "description": "List of managed users",
+            "headers": {
+              "Content-Range": {
+                "type": "string",
+                "description": "Details about range of the returned users list, in the form [start index]-[end index]/[total], i.e.: users 31-60/328"
+              }
+            },
             "schema": {
               "type": "array",
               "items": {
@@ -81,10 +141,7 @@
             }
           },
           "416": {
-            "description": "Requested Range Not Satisfiable"
-          },
-          "503": {
-            "description": "Service unavailable"
+            "description": "Range Not Satisfiable"
           }
         }
       },
@@ -92,7 +149,8 @@
         "tags": [
           "admin"
         ],
-        "summary": "Create a new user",
+        "summary": "Create new user",
+        "description": "The new user will be created as expired and with the password equal to username",
         "operationId": "createUser",
         "security": [
           {
@@ -109,7 +167,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "user informations",
+            "description": "user data without id",
             "required": true,
             "schema": {
               "$ref": "#/definitions/user"
@@ -118,13 +176,19 @@
         ],
         "responses": {
           "201": {
-            "description": "User created"
+            "description": "Created",
+            "headers": {
+              "Location": {
+                "description": "new user URI, i.e.: /admin/user/99",
+                "type": "string"
+              }
+            }
           },
           "406": {
-            "description": "Not Acceptable"
+            "description": "Not Acceptable, invalid username or role name"
           },
           "409": {
-            "description": "Conflict"
+            "description": "Conflict, username already in use"
           }
         }
       }
@@ -134,7 +198,7 @@
         "tags": [
           "admin"
         ],
-        "summary": "Get user by id",
+        "summary": "Get user",
         "operationId": "getUser",
         "security": [
           {
@@ -148,14 +212,14 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "Unique user id",
+            "description": "id of the user to retrieve",
             "type": "string",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "get user",
+            "description": "retrieved user",
             "schema": {
               "$ref": "#/definitions/user"
             }
@@ -169,7 +233,7 @@
         "tags": [
           "admin"
         ],
-        "summary": "Update user by id",
+        "summary": "Edit user",
         "operationId": "editUser",
         "security": [
           {
@@ -186,14 +250,14 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "Unique Id of user",
+            "description": "id of the user to update",
             "type": "string",
             "required": true
           },
           {
             "name": "body",
             "in": "body",
-            "description": "user information",
+            "description": "updated user data",
             "required": true,
             "schema": {
               "$ref": "#/definitions/user"
@@ -209,9 +273,6 @@
           },
           "406": {
             "description": "Invalid username"
-          },
-          "503": {
-            "description": "Service unavailable"
           }
         }
       },
@@ -219,7 +280,7 @@
         "tags": [
           "admin"
         ],
-        "summary": "Delete user by id",
+        "summary": "Delete user",
         "operationId": "deleteUser",
         "security": [
           {
@@ -233,7 +294,7 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "user Id",
+            "description": "id of the user to delete",
             "type": "string",
             "required": true
           }
@@ -241,9 +302,6 @@
         "responses": {
           "202": {
             "description": "Accepted"
-          },
-          "503": {
-            "description": "Service unavailable, user not found"
           }
         }
       }
@@ -253,7 +311,8 @@
         "tags": [
           "admin"
         ],
-        "summary": "Enable an user",
+        "summary": "Disable/enable user",
+        "description": "Switchs the enabling status for the specified user",
         "operationId": "switchUserStatus",
         "security": [
           {
@@ -267,26 +326,20 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "user Id",
+            "description": "id of the user to enable or disable",
             "type": "string",
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Get user enabled",
+            "description": "Updated user data",
             "schema": {
               "$ref": "#/definitions/user"
             }
           },
           "404": {
             "description": "User not found"
-          },
-          "406": {
-            "description": "Invalid username"
-          },
-          "503": {
-            "description": "Service unavailable"
           }
         }
       }
@@ -296,7 +349,8 @@
         "tags": [
           "admin"
         ],
-        "summary": "Reset user password",
+        "summary": "Password reset",
+        "description": "Reset the password for the specified user, setting the new passord equal to username and expiration status to true",
         "operationId": "resetUserPassword",
         "security": [
           {
@@ -310,7 +364,7 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "user Id",
+            "description": "id of the user to reset",
             "type": "string",
             "required": true
           }
@@ -324,9 +378,91 @@
           },
           "406": {
             "description": "Invalid username"
+          }
+        }
+      }
+    },
+    "/authenticate": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Get user profile",
+        "description": "Retrieve current logged user",
+        "operationId": "authenticate",
+        "security": [
+          {
+            "gviam": []
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "the current logged user",
+            "schema": {
+              "$ref": "#/definitions/user"
+            }
+          }
+        }
+      }
+    },
+    "/password": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Change password",
+        "description": "Change the password of the current logged user",
+        "operationId": "changePassword",
+        "security": [
+          {
+            "gviam": []
+          }
+        ],
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "parameters": [
+          {
+            "name": "new_password",
+            "in": "formData",
+            "description": "The new password, Length: min 4, max 28 <br> Valid chars: a-z A-Z 0-9 &#46; &#95; &#64; &amp; &#36; &#35; &#33; &#63; &#45; (no white space)",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No content"
           },
-          "503": {
-            "description": "Service unavailable"
+          "400": {
+            "description": "Bad request, invalid password"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Change expired password",
+        "description": "Set a new password for an expired user",
+        "operationId": "resetPassword",
+        "security": [
+          {
+            "gvrenew": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "the current logged user",
+            "schema": {
+              "$ref": "#/definitions/user"
+            }
+          },
+          "400": {
+            "description": "Bad request, invalid password"
           }
         }
       }
@@ -336,7 +472,8 @@
         "tags": [
           "oauth2"
         ],
-        "summary": "Create access token",
+        "summary": "Get access token",
+        "description": "Request creation of an Oauth2 authentication token in compliance with RFC 6749 1.3.3 Resource Owner Password Credentials",
         "operationId": "createAccessToken",
         "security": [
           {
@@ -351,20 +488,36 @@
         ],
         "parameters": [
           {
+            "name": "token_type",
+            "in": "formData",
+            "description": "Token type: Bearer",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "Bearer"
+            ]
+          },
+          {
             "name": "grant_type",
             "in": "formData",
-            "required": true,
-            "type": "string"
+            "description": "Grant type: password",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "password"
+            ]
           },
           {
             "name": "username",
             "in": "formData",
+            "description": "Resource owner username",
             "required": true,
             "type": "string"
           },
           {
             "name": "password",
             "in": "formData",
+            "description": "Resource owner password",
             "required": true,
             "type": "string",
             "format": "password"
@@ -382,15 +535,16 @@
                 },
                 "access_token": {
                   "type": "string",
-                  "example": "xxxx"
+                  "example": "f43a1-12e1-44t5-098a"
                 },
                 "refresh_token": {
                   "type": "string",
-                  "example": "xxxx"
+                  "example": "5433-c512-8f81-9999"
                 },
                 "expires_in": {
                   "type": "integer",
-                  "example": "milliseconds"
+                  "description": "token life in milliseconds",
+                  "example": 36000
                 },
                 "issue_date": {
                   "type": "string",
@@ -420,7 +574,8 @@
         "tags": [
           "oauth2"
         ],
-        "summary": "Refresh token",
+        "summary": "Refresh access token",
+        "description": "Refresh an Oauth2 authentication token in compliance with RFC 6749 1.3.3 Resource Owner Password Credentials",
         "operationId": "refreshAccessToken",
         "security": [
           {
@@ -437,8 +592,12 @@
           {
             "name": "grant_type",
             "in": "formData",
-            "required": true,
-            "type": "string"
+            "description": "Grant type: refresh",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "refresh"
+            ]
           },
           {
             "name": "access_token",
@@ -465,15 +624,15 @@
                 },
                 "access_token": {
                   "type": "string",
-                  "example": "xxxx"
+                  "example": "5433-c512-8f81-9999"
                 },
                 "refresh_token": {
                   "type": "string",
-                  "example": "xxxx"
+                  "example": "5433-c512-8f81-9999"
                 },
                 "expires_in": {
                   "type": "integer",
-                  "example": "milliseconds"
+                  "example": 36000
                 },
                 "issue_date": {
                   "type": "string",
@@ -485,103 +644,44 @@
           }
         }
       }
-    },
-    "/password": {
-      "post": {
-        "tags": [
-          "password"
-        ],
-        "summary": "Change password",
-        "operationId": "changePassword",
-        "security": [
-          {
-            "gviam": []
-          }
-        ],
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "parameters": [
-          {
-            "name": "new_password",
-            "in": "formData",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No content"
-          },
-          "400": {
-            "description": "Bad request"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      }
-    },
-    "/authenticate": {
-      "post": {
-        "tags": [
-          "authenticate"
-        ],
-        "summary": "Authenticate",
-        "operationId": "authenticate",
-        "security": [
-          {
-            "gviam": []
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "Return the user who does login",
-            "schema": {
-              "$ref": "#/definitions/user"
-            }
-          }
-        }
-      }
     }
   },
   "definitions": {
     "role": {
       "type": "object",
+      "required": [
+        "name"
+      ],
       "properties": {
-        "role": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "integer"
-            },
-            "name": {
-              "type": "string",
-              "example": "manager"
-            },
-            "description": {
-              "type": "string",
-              "example": "Created by GV"
-            }
-          }
+        "id": {
+          "type": "integer",
+          "readOnly": true
+        },
+        "name": {
+          "type": "string",
+          "minLength": 4,
+          "maxLength": 28
+        },
+        "description": {
+          "type": "string"
         }
       }
     },
     "user": {
       "type": "object",
+      "required": [
+        "username",
+        "roles"
+      ],
       "properties": {
         "id": {
-          "type": "integer"
+          "type": "integer",
+          "readOnly": true
         },
         "username": {
           "type": "string",
-          "example": "nome.cognome"
+          "minLength": 4,
+          "maxLength": 256
         },
         "expired": {
           "type": "boolean"
@@ -593,17 +693,19 @@
           "type": "object",
           "properties": {
             "fullname": {
-              "type": "string",
-              "example": "nome cognome"
+              "type": "string"
             },
             "email": {
               "type": "string",
-              "example": "email@dominio.com"
+              "example": "email@example.com"
             }
           }
         },
-        "roles": {
-          "$ref": "#/definitions/role"
+       "roles": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/role"
+          }
         }
       }
     }
@@ -611,6 +713,11 @@
   "securityDefinitions": {
     "gviam": {
       "type": "basic"
+    },
+    "gvrenew": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "x-renew-password"
     }
   }
 }
